vlib/v/parser/tests/main_and_script_err.out
vlib/v/parser/tests/main_and_script_err.vv:5:1: error: function `main` is already defined, put your script statements inside it
    3 | }
    4 | 
    5 | println('out')
      | ~~~~~~~
